@@ -3,7 +3,9 @@ AUX dpkg-1.14.25-ldadd-order.patch 2040 RMD160 59369b902b8a52a1b444c83d214b258ea
 AUX dpkg-1.14.25-start-stop-daemon.8.patch 982 RMD160 a3c950f3267d1209e1370cd6312f7cd47589c250 SHA1 6b51b1fc1c1b71b43c15f73d56c6238f9a34798f SHA256 d4e80186144ba125fbdb8bd90ab083ee796f7934acbc0d4bfebaa63f6a2daf9f
 DIST dpkg_1.14.25.tar.gz 6823861 RMD160 9b5c3b2a84730155de6e1f04efea31ec525253c3 SHA1 e196c16ad9c4c4785b8620b48996a9fe9188bdeb SHA256 545ce9830f0cf649e3b1b40d25d13989c23302623bf9b50f4c24402f63c82184
 DIST dpkg_1.15.0.tar.gz 6707886 RMD160 377ac42cd5ed392f0f193a2de49cdc6911a53a0b SHA1 5810eb92225882112bae82b09cb02a345f0b2b57 SHA256 3ace352953112783e4018ca43e1cd50a2ec362dcd39e762fe335e9a0bb8c8ceb
+DIST dpkg_1.15.1.tar.gz 7042718 RMD160 1ff8f5907f257fcfcacfeb46aa2e4295cc034392 SHA1 ade2d62e93cc0241d9635209415519092fda8097 SHA256 5d88e04046531583e0ecf3e89c9dd8e726ec73af8c37e9c1e334179f9d1f2744
 EBUILD dpkg-1.14.25.ebuild 1703 RMD160 efc8ff838b4e3d3340e04c6f0dd5806e0da913cd SHA1 52ca7331434d900d4fab3181f438e171c9c7e6f6 SHA256 fa96cf1eb2d1ff43ae02b27f6de6c70b912567b8eca768c6fc02b7d220196f08
 EBUILD dpkg-1.15.0.ebuild 1737 RMD160 2861cd98871da1e724e2e3e908daebcc2bd72ce3 SHA1 b2a5fe585f8f11d308416d331f8b916546b46a32 SHA256 1db2d40ec107a36a44859b07e9318ca32f866f6a70d1672b4aeae3afd97b724c
-MISC ChangeLog 10990 RMD160 5fcc648ff3d622d9bd7d520f8e8907db9aaa4d13 SHA1 e7d82863ee062c7b5108889ca20473960b592cb5 SHA256 5acaf9a5e94bbbcef4fd809fd912594b1856803950a71163deaf5d10e67eb723
+EBUILD dpkg-1.15.1.ebuild 1611 RMD160 46fdc07720110b0417f1c8f75eb912585502ed55 SHA1 15759d1b1f14f874c433f555bf18ae126a56d69b SHA256 7853a2f488039fb27c73b7f0e23b2d8cfa545449e1a0b6dd1973252d0aec537e
+MISC ChangeLog 11217 RMD160 04e4931bfdb8205499451f039b5a74b2c987f2af SHA1 2f59a65cef5cdc826c76cdedab08ce3ac11ef055 SHA256 8d98b884389bda5e58dacfe67e10a8b081d1726a539cbfdcfbbab10789576b2e
 MISC metadata.xml 162 RMD160 ebe445a93e16f05a392ebdf3882b56b92931e37e SHA1 8bc26eb7c98535f3e31d2288f25fba83838857e5 SHA256 316a32c1e8ee9f6548707abec9a803d0a19feea1be10a19273cc04e0cd357644
